--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -22,38 +22,39 @@
     </com.flurgle.camerakit.CameraView>
 
 
-
     <ImageView
-        android:alpha=".7"
-        android:clickable="true"
-        android:focusable="true"
         android:id="@+id/iv_toggle_camera"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/ic_camera_front_white_24dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginEnd="12dp"
-        android:layout_marginRight="12dp" />
-
-    <ImageView
+        android:layout_marginEnd="0dp"
+        android:layout_marginRight="0dp"
+        android:layout_marginTop="0dp"
+        android:alpha=".85"
         android:clickable="true"
         android:focusable="true"
-        android:alpha=".7"
+        android:padding="16dp"
+        android:src="@drawable/ic_camera_front_white_24dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
         android:id="@+id/iv_home_gallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="0dp"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="0dp"
+        android:alpha=".85"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="16dp"
         android:src="@drawable/ic_home_white_24dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="12dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginLeft="12dp" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:visibility="invisible"
-        android:alpha=".7"
+        android:alpha=".4"
         android:id="@+id/iv_timer_seconds"
         android:layout_width="75dp"
         android:layout_height="64dp"
@@ -67,7 +68,7 @@
         android:id="@+id/grid_lines_container"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:alpha=".7"
+        android:alpha=".5"
         android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
         app:layout_constraintHorizontal_bias="1.0"
