--- a/app/src/main/res/menu/menu_view_image.xml
+++ b/app/src/main/res/menu/menu_view_image.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item
-        android:id="@+id/delete_image"
-        android:icon="@drawable/ic_delete_black_24dp"
-        app:showAsAction="ifRoom"
-        android:title="Delete Image">
-    </item>
+    <!--<item-->
+        <!--android:id="@+id/delete_image"-->
+        <!--android:icon="@drawable/ic_delete_black_24dp"-->
+        <!--app:showAsAction="ifRoom"-->
+        <!--android:title="Delete Image">-->
+    <!--</item>-->
     <item
         android:id="@+id/share_photo"
         android:icon="@drawable/ic_share_black_24dp"
