--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -30,6 +30,7 @@
         android:layout_marginRight="0dp"
         android:layout_marginTop="0dp"
         android:alpha=".85"
+        android:contentDescription="@string/toggle_camera_content_description"
         android:clickable="true"
         android:focusable="true"
         android:padding="16dp"
@@ -41,6 +42,7 @@
         android:id="@+id/iv_home_gallery"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:contentDescription="@string/open_gallery_content_description"
         android:layout_marginLeft="0dp"
         android:layout_marginStart="0dp"
         android:layout_marginTop="0dp"
@@ -58,6 +60,7 @@
         android:id="@+id/iv_timer_seconds"
         android:layout_width="75dp"
         android:layout_height="64dp"
+        android:contentDescription="@string/timer_counter_content_description"
         android:src="@drawable/ic_timer_10_white_24dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -153,6 +156,7 @@
             android:id="@+id/iv_toggle_flash"
             android:layout_width="54dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/enable_flash_content_description"
             android:src="@drawable/ic_flash_default_black_24dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/iv_toggle_timer"
@@ -165,6 +169,7 @@
             android:focusable="true"
             android:padding="10dp"
             android:scaleType="centerCrop"
+            android:contentDescription="@string/enable_grid_lines_content_description"
             android:id="@+id/iv_toggle_grid"
             android:layout_width="54dp"
             android:layout_height="0dp"
@@ -188,7 +193,8 @@
             app:layout_constraintTop_toTopOf="parent"
             tools:layout_editor_absoluteX="157dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp" />
+            android:layout_marginStart="16dp"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:clickable="true"
@@ -198,6 +204,7 @@
             android:id="@+id/iv_toggle_timer"
             android:layout_width="54dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/change_timer_content_description"
             android:src="@drawable/ic_access_time_black_24dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_toggle_flash"
             app:layout_constraintEnd_toStartOf="@+id/imageView"
@@ -212,6 +219,7 @@
             android:id="@+id/iv_view_last_image"
             android:layout_width="54dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/open_last_taken_image_content_description"
             android:src="@drawable/ic_photo_size_select_actual_black_24dp"
             app:layout_constraintBottom_toBottomOf="@+id/iv_toggle_timer"
             app:layout_constraintEnd_toStartOf="@+id/iv_toggle_grid"
@@ -235,6 +243,7 @@
         android:id="@+id/iv_take_photo"
         android:layout_width="75dp"
         android:layout_height="75dp"
+        android:contentDescription="@string/take_photo_content_description"
         android:src="@drawable/ic_camera_black_48dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
