--- a/app/src/main/res/layout/gallery_list_item.xml
+++ b/app/src/main/res/layout/gallery_list_item.xml
@@ -4,6 +4,7 @@
     android:id="@+id/iv_gallery_list_item"
     android:scaleType="centerCrop"
     tools:src="@drawable/seven"
+    android:contentDescription="@string/image_content_description"
     android:layout_width="wrap_content"
     android:layout_height="200dp">
 </ImageView>
