--- a/app/src/main/res/menu/menu_gallry.xml
+++ b/app/src/main/res/menu/menu_gallry.xml
@@ -5,13 +5,15 @@
         android:id="@+id/edit_image"
         android:icon="@drawable/ic_camera_enhance_black_24dp"
         app:showAsAction="ifRoom"
-        android:title="Edit Image">
+        android:contentDescription="@string/edit_image_content_description"
+        android:title="@string/edit_image">
     </item>
     <item
         android:id="@+id/camera_page"
         android:icon="@drawable/ic_photo_camera_black_24dp"
         app:showAsAction="ifRoom"
-        android:title="Share">
+        android:contentDescription="@string/open_camera_content_description"
+        android:title="@string/open_camera">
     </item>
 
 </menu>
